--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -8,6 +8,8 @@
 
     <ui:composition template="/template_login.xhtml">
         <ui:define name="body">
+            <div class="wrapper fadeInDown">
+                <div id="formContent">
             <h:form class="needs-validation" id="loginForm"> 
                 <h:inputText id="usuario" class="fadeIn second" value="#{login.usuario}" required="true"  requiredMessage="Ingresa un usuario valido" a:placeholder="Usuario"/>
                 <h:messages class="alert alert-danger" for="usuario"/>
@@ -16,6 +18,8 @@
                 <h:commandButton value="Ingresar" action="#{login.login3()}"/>
             </h:form>
             <h:link onclick="#{usuarioController.prepareCreate()}" outcome="register1">Registrarse</h:link>
+                </div>
+            </div>
         </ui:define>
     </ui:composition>
 </html>
